Fix td vertical align
For better alignment of labels and inputs

--- a/manager/media/style/MODxRE/style.css
+++ b/manager/media/style/MODxRE/style.css
@@ -2372,7 +2372,7 @@ input#dateto:focus.DatePicker {
 .sectionBody th {
   padding: 1px 5px;
   text-align: left;
-  vertical-align: top;
+  vertical-align: middle;
 }
 
 .sectionBody .displayparams,
@@ -2483,7 +2483,7 @@ li.breadcrumbs__li_current {
 .table th,
 .table td {
   text-align: left;
-  vertical-align: top;
+  vertical-align: middle;
 }
   
 .table--edit th {
